# Visual-Notebook-V1

./: .gitignore  README.md  pyproject.toml
backend/: .gitignore  pyproject.toml
backend/tests/: test_history.py  test_import_export.py
backend/visual_notebook/: __init__.py  controller.py  main.py  session.py
backend/visual_notebook/api/: __init__.py  deps.py  routes.py  schemas.py
backend/visual_notebook/data/: __init__.py  loader.py  schema.py  types.py
backend/visual_notebook/domain/: __init__.py  history.py  operations.py
backend/visual_notebook/viz/: __init__.py  _common.py  area.py  bar_stacked.py  bar_topn.py  box.py  funnel.py  heatmap.py  histogram.py  map.py  pie.py  scatter.py  timeline.py  treemap.py
docs/: 01-architecture.md  01-architettura.md  02-backend.md  03-frontend.md  04-cascade.md  05-operations.md  05-operazioni.md  README.md
docs/en/: 02-backend.md  03-frontend.md  04-cascade.md  README.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  global.css  main.tsx
frontend/src/constants/: charts.ts  keys.ts  operations.ts  ui.ts
frontend/src/hooks/: useChartEvents.ts  useChartFiltering.ts  useClickOutside.ts  useDragAndDrop.ts  useFileDrop.ts  useGlobalResize.ts  useLatest.ts  useNotebookInitialization.ts  useOpForm.ts  useScrollSync.ts  useTablePreview.ts  useVisualizationPanel.ts
frontend/src/services/: api.ts  cascade.ts
frontend/src/store/: error.ts  notebook.ts  ui.ts  viz.ts
frontend/src/types/: charts.ts  data.ts  (+6 more)
(+44 files in other folders)
