[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-notebook"
version = "0.2.0"
description = "Visual Notebook — backend (FastAPI + Polars)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "polars>=1.0",
    "numpy>=1.24",
    "pydantic>=2.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["visual_notebook*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
